--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,31 +4,24 @@ on:
   pull_request:
     paths-ignore:
       - '**.md'
-  push:
-    paths-ignore:
-      - '**.md'
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
-  cancel:
-
-    name: 'Cancel previous runs'
-    runs-on: ubuntu-latest
-    timeout-minutes: 2
-
-    steps:
-      - uses: styfle/cancel-workflow-action@0.5.0
-        with:
-          access_token: ${{ github.token }}
-
   build:
-
     name: 'Build and test'
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
 
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version:
+          - 18.x
+          - 20.x
+          - 22.x
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -39,27 +32,27 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - run: yarn install --frozen-lockfile
+      - run: |
+          yarn install --frozen-lockfile
+          yarn build
 
-      - run: yarn test
-
+      - run: yarn test:cov
       - run: yarn coveralls
 
       - name: Parallel Coveralls report
-        uses: coverallsapp/github-action@master
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ github.token }}
-          flag-name: run-${{ matrix.test_number }}
+          flag-name: run-${{ join(matrix.*, '-') }}
           parallel: true
 
   coveralls:
-
     needs: build
     runs-on: ubuntu-latest
 
     steps:
       - name: Finished Coveralls report
-        uses: coverallsapp/github-action@master
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ github.token }}
           parallel-finished: true
