--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "node build.js",
     "server": "node src/index.js",
     "coveralls": "nyc report --reporter=lcov",
-    "test": "npm run lint && nyc ava",
+    "test": "ava",
+    "test:cov": "nyc ava",
     "lint": "eslint \"{functions,src,test}/**/*.js\""
   },
   "dependencies": {
@@ -68,7 +69,7 @@
     "history": "^5.3.0",
     "human-number": "^2.0.1",
     "mocked-env": "^1.3.5",
-    "mongodb-memory-server": "^8.5.2",
+    "mongodb-memory-server": "^10.1.3",
     "nodemon": "^2.0.16",
     "normalize.css": "^8.0.1",
     "nyc": "^15.1.0",
