--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   publish = "dist"
-  command = "yarn build"
+  command = "npm run build"
   functions = "functions/"
-  environment = { NODE_VERSION = "14.19.0", NODE_ENV = "production" }
+  environment = { NODE_VERSION = "22.13.1", NODE_ENV = "production" }
 
 [[redirects]]
   from = "/api"
