--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "build:pre": "BUILD_ENV=pre npm run build",
     "build": "node build.js",
     "server": "node src/index.js",
-    "coveralls": "nyc report --reporter=lcov",
     "test": "ava",
-    "test:cov": "nyc ava",
+    "test:cov": "nyc npm test",
+    "coverage": "nyc report --reporter=lcov",
     "lint": "eslint \"{functions,src,test}/**/*.js\""
   },
   "dependencies": {
@@ -64,7 +64,6 @@
     "@electerious/eslint-config": "^3.5.0",
     "ava": "5.1.0",
     "classnames": "^2.3.1",
-    "coveralls": "^3.1.1",
     "formbase": "^12.0.2",
     "history": "^5.3.0",
     "human-number": "^2.0.1",
@@ -89,10 +88,7 @@
   },
   "ava": {
     "verbose": true,
-    "timeout": "20s",
-    "environmentVariables": {
-      "ACKEE_TRACKER": "custom name"
-    }
+    "timeout": "20s"
   },
   "eslintConfig": {
     "root": true,
